# pc-app-tauri

./: .gitignore  next.config.mjs  package-lock.json  package.json
src-tauri/: Cargo.toml  my_database.db3  tauri.conf.json
src-tauri/src/: main.rs
src/app/: page.tsx
