[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.6.2", features = [ "path-all", "dialog-all"] }
# excel
calamine = "0.16.2"
# SQLite
#rusqlite =  "0.24.2"
# https://pc.atsuhiro-me.net/entry/2023/05/01/004000
# https://crates.io/crates/rusqlite
rusqlite = { version = "0.24.2", features = ["bundled"] }
directories = "3.0.1"
walkdir = "2.3.2"

#[dependencies.tauri-plugin-sql]
#features = ["sqlite"] # or "postgres", or "mysql"
#version = "2.0.0-beta"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
